--- a/CatalogXS/trunk/CatalogXS/resources/index.html
+++ b/CatalogXS/trunk/CatalogXS/resources/index.html
@@ -1,6 +1,6 @@
-<lift:WebShop.webShop eager_eval="true">
+<lift:Shop.shop eager_eval="true">
 	<lift:surround with="default" at="content">
 	  <head><title>Catalog Listing</title></head>
 	    <lift:embed what="promotion" /> 
 	</lift:surround>
-</lift:WebShop.webShop>
+</lift:Shop.shop>
