--- a/CatalogXS/trunk/CatalogXS/resources/shoppingcart.html
+++ b/CatalogXS/trunk/CatalogXS/resources/shoppingcart.html
@@ -1,4 +1,4 @@
-<lift:Catalog.catalog eager_eval="true">
+<lift:Shop.shop eager_eval="true">
 <lift:surround with="default" at="content">
  <h2>Shopping Cart</h2>
   <lift:ShoppingCart.show phase="1" shopping_list_id="shopping_list">
@@ -50,4 +50,4 @@
     Order geplaatst melding...
   </lift:ShoppingCart.show>
 </lift:surround>
-</lift:Catalog.catalog>
+</lift:Shop.shop>
