--- a/CatalogXS/trunk/CatalogXS/resources/templates-hidden/default.html
+++ b/CatalogXS/trunk/CatalogXS/resources/templates-hidden/default.html
@@ -35,14 +35,14 @@
         <td class="page_right"> 
           <div class="page_menu" id="page_right"> 
             <div class="page_searchbox">
-              <lift:Catalog.search form="POST"> 
+              <lift:Shop.search form="POST"> 
                 <table> 
                   <tr> 
                     <td><search:searchString /></td> 
                     <td><search:submit /></td> 
                   </tr> 
                 </table> 
-              </lift:Catalog.search> 
+              </lift:Shop.search> 
               <form method="post" action="http://nieuwsbrief.netrex.eu/netrexmail/form.php?form=23" id="frmSS23" onSubmit="return CheckForm23(this);"> 
                 <table style="margin-top:5px;"> 
                   <tr> 
