--- a/CatalogXS/trunk/CatalogXS/resources/templates-hidden/productgroup_list.html
+++ b/CatalogXS/trunk/CatalogXS/resources/templates-hidden/productgroup_list.html
@@ -1,4 +1,4 @@
-<catalog:top_level_groups>
+<shop:top_level_groups>
   <div class="page_menu_artgrp">
     <div class="description"><group:group_value property="Name"/></div>
 		<table class="ThemePanelMenu" cellspacing="0">
@@ -13,4 +13,4 @@
 		  </tbody>
 		</table>
   </div>
-</catalog:top_level_groups>
+</shop:top_level_groups>
