--- a/CatalogXS/trunk/CatalogXS/resources/templates-hidden/promotion.html
+++ b/CatalogXS/trunk/CatalogXS/resources/templates-hidden/promotion.html
@@ -1,4 +1,4 @@
-<catalog:promotions>
+<shop:promotions>
   <div style="width:270px;float:left;padding-bottom:50px;margin-right:5px;">
     <!-- img src="images/specialoffer.png" style="position:relative;top:0;right:0" /-->
     <promotion:product>
@@ -22,4 +22,4 @@
       <promotion:product><product:link>More info &gt;&gt;</product:link></promotion:product>
     </div>
   </div>
-</catalog:promotions>
+</shop:promotions>
