--- a/CatalogXS/trunk/CatalogXS/resources/search.html
+++ b/CatalogXS/trunk/CatalogXS/resources/search.html
@@ -1,20 +1,20 @@
-<lift:Catalog.catalog eager_eval="true">
+<lift:Shop.shop eager_eval="true">
 		<lift:surround with="default" at="content">
 		  <head><title>Product Groups</title></head>
-		  <div class="contentheading">Search Results for '<catalog:currentSearchString/>'</div>
+		  <div class="contentheading">Search Results for '<shop:currentSearchString/>'</div>
 		  <table>
 		    <thead>
 		      <th style="width:10%"><lift:loc>ArticleNumber</lift:loc></th>
 		      <th style="width:75%;text-align:center"><lift:loc>Description</lift:loc></th>
 		      <th style="width:15%"><lift:loc>Price</lift:loc></th>
 		    </thead>
-		  <catalog:currentSearchProducts>
+		  <shop:currentSearchProducts>
 		      <tr>
             <td><product:link><product:value property="ArticleNumber" /></product:link></td>
 		        <td><product:value property="Description"/></td>
 		        <td><product:value property="Price" /></td>
 		      </tr>
-		  </catalog:currentSearchProducts>
+		  </shop:currentSearchProducts>
 		  </table>
 		</lift:surround>
-</lift:Catalog.catalog>
+</lift:Shop.shop>
