git-svn-id: file:///var/svn/claro-catalog@149 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/resources/group.html
+++ b/CatalogXS/trunk/CatalogXS/resources/group.html
@@ -1,5 +1,5 @@
 <lift:Shop.shop eager_eval="true">
-  <shop:currentProductGroup>
+  <shop:current_product_group>
 		<lift:surround with="default" at="content">
 		  <head><title>Group <group:group_value property="Name"/></title></head>
 		  <div class="contentheading"><group:group_value property="Name"/></div>
@@ -46,5 +46,5 @@
 		    </group:products>
 		  </table>
 		</lift:surround>
-  </shop:currentProductGroup>
+  </shop:current_product_group>
 </lift:Shop.shop>
