--- a/CatalogXS/trunk/CatalogXS/resources/shoppingcart.html
+++ b/CatalogXS/trunk/CatalogXS/resources/shoppingcart.html
@@ -25,7 +25,7 @@
             </shoppingcart:product>
             <td><shoppingcart:volume shoppingcart:maxlength="3" shoppingcart:style="width:30px;margin:0 5px;" /></td>
             <td style="text-align:right;"><shoppingcart:priceTotal/></td>
-            <td style="text-align:center;"><shoppingcart:deleteButton><img src="images/bin_closed.png" /></shoppingcart:deleteButton></td>
+            <td style="text-align:center;"><shoppingcart:deleteButton><img src="/images/bin_closed.png" /></shoppingcart:deleteButton></td>
           </tr>
           </item:list>
           <tr>
