git-svn-id: file:///var/svn/claro-catalog@167 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/test/showcase-section1.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/test/showcase-section1.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <h3>Section 1</h3>
-<p>The test blog is still available here: <test:blog><blog:title/></test:blog></p>
+<p>The test blog is still available in the included template: <test:blog><blog:title/></test:blog></p>
 
 
 </html>
