git-svn-id: file:///var/svn/claro-catalog@177 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/index.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/index.html
@@ -3,7 +3,7 @@
 <!-- 
  -->
 <h2>List Bindings</h2>
-<test:blog>
+<showcase:blog>
   <h3><blog:title/></h3>
   <div style="border:2px solid grey">
   <blog:entries>
@@ -19,7 +19,7 @@
     <list:last>Title of last entry (out of <list:size />) : <entry:title/></list:last>
   </blog:entries>
   </div>
-</test:blog>
+</showcase:blog>
  
 <h2>Include Templates</h2>
 <template:include template="showcase-section1">
