git-svn-id: file:///var/svn/claro-catalog@178 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/index.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/index.html
@@ -22,10 +22,11 @@
 </showcase:blog>
  
 <h2>Include Templates</h2>
-<template:include template="showcase-section1">
+<template:include template="section1">
 <template:define template="nested">
-Content of nested Template!
+Content of nested Template
 </template:define>
+Content of parent Template
 </template:include>
 
 <!-- 
