--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/section1.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/section1.html
@@ -3,4 +3,6 @@
 <p>The test blog is <b>still available</b> in the included template: <test:blog><blog:title/></test:blog></p>
 <h3>Nested template</h3>
 <template:include template="nested"/>
+<h3>Parent Content</h3>
+<template:content/>
 </html>
