git-svn-id: file:///var/svn/claro-catalog@180 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/page.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/page.html
@@ -28,7 +28,7 @@
     <table id="site_table" class="page_content">
       <tr valign="top"> 
         <td class="page_left"> 
-          <template-include template="left-bar"/>
+          <template:include template="left_bar"/>
         </td>
         <td class="page_middle"> 
           <div class="homepage_nieuws_midden"> 
