--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/group.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/group.html
@@ -7,7 +7,8 @@
 		  <div class="groupdesc"><group:group_value property="Description"/></div>
 		  <group:sub_groups tag="sub">
 			  <div class="subgroup">   	    
-			  	<p><a class="subgroup" sub:href=""><sub:group_value property="Name"/></a></p>
+			  	<p><sub:link class="subgroup" sub:href="s"><sub:group_value property="Name"/></sub:link></p>
+			  	<p><a class="subgroup" sub:href="s"><sub:group_value property="Name"/></a></p>
 				</div>
 		  </group:sub_groups>
 		  
