--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/group_menu.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/group_menu.html
@@ -6,7 +6,7 @@
     		<group:sub_groups prefix="sub">
 		      <tr class="ThemePanelMainItem">
 		        <td class="ThemePanelMainItemLeft" />
-		        <td class="ThemePanelMainItemText"><a class="ThemePanelMainItemText" sub:href=""><sub:group_value property="Name"/></a></td>
+		        <td class="ThemePanelMainItemText"><sub:link class="ThemePanelMainItemText"><sub:group_value property="Name"/></sub:link></td>
 		        <td class="ThemePanelMainItemRight" />
 		      </tr>
 	    	</group:sub_groups>
