--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/promotions.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/shop/site/promotions.html
@@ -1,4 +1,8 @@
-<shop:promotions>
+<table>
+<shop:promotions group-size="2">
+<tr>
+  <list:group>
+  <td>
   <div style="width:270px;float:left;padding-bottom:50px;margin-right:5px;">
     <!-- img src="images/specialoffer.png" style="position:relative;top:0;right:0" /-->
     <promotion:product>
@@ -22,4 +26,9 @@
       <promotion:product><product:link>More info &gt;&gt;</product:link></promotion:product>
     </div>
   </div>
+  </td>
+  </list:group>
+  
+</tr>
 </shop:promotions>
+</table>
