git-svn-id: file:///var/svn/claro-catalog@192 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/product.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/product.html
@@ -9,13 +9,13 @@
          <tr><td><property:name/></td><td><property:value/></td></tr>
        </product:properties>
      </table>
-      <lift:ShoppingCart.addToCart>
+      <liftShoppingCart.addToCart>
         <span style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</span>
-      </lift:ShoppingCart.addToCart>
+      </liftShoppingCart.addToCart>
 
-      <shop:shopping_cart>
+      <webshop:shopping_cart>
       <shopping_cart:add product="product"/>
-      </shop:shopping_cart>
+      </webshop:shopping_cart>
    </webshop:current_product>
    <webshop:current_product when-exists="false">
    </webshop:current_product>
