--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotion.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/promotion.html
@@ -13,9 +13,11 @@
   <div>
     <br/><br/>
     <promotion:product>
-    <lift:ShoppingCart.addToCart>
+    <webshop:shopping_cart>
+    <shopping_cart:add>
       <span class="add_to_cart">Add to Cart</span>
-    </lift:ShoppingCart.addToCart>
+    </shopping_cart:add>
+    </webshop:shopping_cart>
     <br/><br/>
     </promotion:product>
     <promotion:product><product:link>More info &gt;&gt;</product:link></promotion:product>
