git-svn-id: file:///var/svn/claro-catalog@194 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/product.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/product.html
@@ -14,12 +14,9 @@
 </product:properties>
 </tbody>
 </table>
-     <liftShoppingCart.addToCart>
-        <span style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</span>
-      </liftShoppingCart.addToCart>
 
-      <webshop:shopping-cart id="addtoshoppingcart">
-      <shopping-cart:add product="product">ADD</shopping-cart:add>
+      <webshop:shopping-cart>
+        <shopping-cart:add product="product" style="float:right;padding: 8px 12px;font-size: 12px;text-decoration: none;white-space:nowrap;line-height:20px;border: 1px solid #999;color: #4D4D4D;background: #FC0 url(../images/bg_d01.gif) repeat-x 0px 50%;">Add to Cart</shopping-cart:add>
       </webshop:shopping-cart>
    </webshop:current-product>
    <webshop:current-product when-exists="false">
