--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
@@ -18,7 +18,7 @@
               <td><product:value property="Description"/></td>
               <td style="text-align:right;"><product:value property="Price"/></td>
             </item:product>
-            <td><item:volume shoppingcart:maxlength="3" shoppingcart:style="width:30px;margin:0 5px;" /></td>
+            <td><item:volume-edit maxlength="3" style="width:30px;margin:0 5px;" /></td>
             <td style="text-align:right;"><item:priceTotal/></td>
             <td style="text-align:center;"><item:deleteButton><img src="/images/bin_closed.png" /></item:deleteButton></td>
           </tr>
