git-svn-id: file:///var/svn/claro-catalog@196 0db79848-0afd-4259-9b79-6da5ec97fbb6

--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/webshop/website/shopping_cart.html
@@ -20,7 +20,7 @@
             </item:product>
             <td><item:volume-edit maxlength="3" style="width:30px;margin:0 5px;" /></td>
             <td style="text-align:right;"><item:total-price/></td>
-            <td style="text-align:center;"><item:deleteButton><img src="/images/bin_closed.png" /></item:deleteButton></td>
+            <td style="text-align:center;"><item:remove><img src="/images/bin_closed.png" /></item:remove></td>
           </tr>
       </shopping-cart:items>
           <tr>
