--- a/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/lists.html
+++ b/CatalogXS/trunk/CatalogXS/source/claro/cms/showcase/lists.html
@@ -11,13 +11,13 @@
   <tr><td><code>&lt;list:plural&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;list:index&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;list:size&gt;</code></td><td></td></tr> 
+  <tr><td><code>&lt;list:repeat&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;... list-prefix="<i>list</i>"&gt;</code></td><td></td></tr> 
-  <tr><td><code>&lt;... list-repeat="<i>immediate</i>"&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;... group-size="<i>1</i>"&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;... group-count="<i>-1</i>"&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;... group-scatter="<i>false</i>"&gt;</code></td><td></td></tr> 
   <tr><td><code>&lt;list:group list-prefix="group"&gt;</code></td><td></td></tr> 
-  <tr><td><code>&lt;list:group-fill&gt;</code></td><td></td></tr> 
+  <tr><td><code>&lt;list:group-fill list-prefix="fill"&gt;</code></td><td></td></tr> 
 </table>
 
 <table border="0">
@@ -50,10 +50,10 @@
 
 <tr colspan="2"><td><h4>Repeat, Size, Plural</h4></td></tr>
 <showcase:sample>
-<world:continents list-repeat="delayed">
+<world:continents>
   <p>There are <list:size/> continent<list:plural>s</list:plural></p>
   <list:repeat>
-    <continent:countries list-repeat="delayed">
+    <continent:countries>
       <continent:name/> has <list:size/> 
       <list:single>country</list:single>
       <list:plural>countries</list:plural>
@@ -96,14 +96,30 @@
 <tr colspan="2"><td><h4>Groups, group-fill</h4></td></tr>
 <showcase:sample>
 <table>
-<world:continents group-count="2">
+<world:continents group-count="3">
 <tr>
   <list:group>
     <td><continent:name/></td>
-    <group:fill>
-      <td><i>(empty)</i></td>
-    </group:fill>
   </list:group>
+  <list:group-fill>
+    <td><i>(empty <fill:index/>)</i></td>
+  </list:group-fill>
+</tr>
+</world:continents>
+</table>
+</showcase:sample>
+
+<tr colspan="2"><td><h4>Groups, group-fill, group-scatter</h4></td></tr>
+<showcase:sample>
+<table>
+<world:continents group-count="3" group-scatter="true">
+<tr>
+  <list:group>
+    <td><continent:name/></td>
+  </list:group>
+  <list:group-fill>
+    <td><i>(empty <fill:index/>)</i></td>
+  </list:group-fill>
 </tr>
 </world:continents>
 </table>
